--- a/Sources/MacMenuUtil.xcodeproj/xcshareddata/xcschemes/RunMacMenuUtil.xcscheme
+++ b/Sources/MacMenuUtil.xcodeproj/xcshareddata/xcschemes/RunMacMenuUtil.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1230"
+   LastUpgradeVersion = "1540"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "FA0F7B762105CBC30028CF34"
-               BuildableName = "OSAScript"
-               BlueprintName = "OSAScript"
-               ReferencedContainer = "container:OSAScript.xcodeproj">
+               BuildableName = "MacMenuUtil"
+               BlueprintName = "MacMenuUtil"
+               ReferencedContainer = "container:MacMenuUtil.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -31,9 +31,9 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      buildConfiguration = "Release"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -45,9 +45,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "FA0F7B762105CBC30028CF34"
-            BuildableName = "OSAScript"
-            BlueprintName = "OSAScript"
-            ReferencedContainer = "container:OSAScript.xcodeproj">
+            BuildableName = "MacMenuUtil"
+            BlueprintName = "MacMenuUtil"
+            ReferencedContainer = "container:MacMenuUtil.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -62,9 +62,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "FA0F7B762105CBC30028CF34"
-            BuildableName = "OSAScript"
-            BlueprintName = "OSAScript"
-            ReferencedContainer = "container:OSAScript.xcodeproj">
+            BuildableName = "MacMenuUtil"
+            BlueprintName = "MacMenuUtil"
+            ReferencedContainer = "container:MacMenuUtil.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
@@ -73,6 +73,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "RunMacMenuUtil"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
